tests/neg/i18446/Test.scala
val _ = foo.Task.poll() // error
